--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			background: #22556e;
+			background: #486f83;
 			padding: 1rem;
 			text-align: center;
 			text-decoration: none;
 			font-size: 1.1rem;
-			color: #fff;
+			color: #ffffff;
 		}
 
 		.nav__item:hover {
